<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.doctor.DoctorDetailsActivity">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_10dp"
        app:cardBackgroundColor="@color/teal_700"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Name"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="@dimen/_10dp"
                android:textSize="@dimen/_20sp"/>

            <TextView
                android:id="@+id/expertise_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Expertise"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:textSize="@dimen/_16sp"/>

            <TextView
                android:id="@+id/h_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Hospital Name"
                android:textStyle="bold"

                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/email_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Email"
                android:textStyle="bold"

                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/mobile_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Mobile"
                android:textStyle="bold"

                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/working_days_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Working Days"
                android:textStyle="bold"

                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:textSize="16sp"/>
            <!--<TextView
                android:id="@+id/appointment_fee_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Appointment Fee"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:textSize="16sp"/>-->
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/teal_700"
        android:orientation="vertical"
        android:paddingLeft="3dp">


        <!--Address-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Extra Information"
                android:textColor="@color/white"

                android:textSize="@dimen/_16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:background="@drawable/textfield_bg"
                android:orientation="vertical"

                >

                <EditText
                    android:id="@+id/extra_et"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="Write any additional information..."
                    android:inputType="textMultiLine"
                    android:padding="@dimen/_10dp"
                    android:textColor="@color/white"
                    android:textColorHint="#BFBFBF" />

            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/date_btn"
                android:layout_width="@dimen/_20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Select Date" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/time_btn"
                android:layout_width="@dimen/_20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Select Time" />
        </LinearLayout>

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Select your appointment Date and Time"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="245dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="N.B.:"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/nbpt_doc_1"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/nbpt_doc_2"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/nbpt_doc_3"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/nbpt_doc_4"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/nbpt_doc_5"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appointment_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/solid_bg_app_color_round_corner"
        android:text="Make Appointment"
        android:textColor="@color/white" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/progressBar"/>
</RelativeLayout>